<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HD Movies</string>
    <string name="app_name_for_app">HD Movies 2022</string>
    <string name="copyright">Copyright © 2021 SHR_Creation. \nAll right reserved</string>
    <string name="url_play_more_apps">https://play.google.com/store/apps/dev?id=5967016763322581246</string>
    <string name="url_play_privacy_policy">https://shrcreation.com/privacy.html</string>
    <string name="play_console_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAntKjxTFg1tIwTNxHBs80Cw3ktVUnn3m743epByX7aPDsasXVrZMCguEvnFjOh3Plw3C21Bx5D4ghlXHFl+ZafMznS+fk+kR6kvN0UqnYBqNl5q/z+1jP1AVZ1vtw6GOouZGWVGOSidw3QHjLrW1J2JHP7jdmDzSXc3/KBgKZXUrWDqJrF4JBs1qbtVyyPz+V8Zj60hFsxHrJv29VRjFbmWQmuaen1z6xyZcmS/cbggZ5bMLkvGBdNF0avpMpwiihg6PPkmRhw8hguLJp4OtjxHGnIDGKVn1kBUMfrFiMACXEUbj8XqEzG7D6vHQamobVnnSfww6N4gwT19OOoV5enwIDAQAB</string>
    <string name="play_name">SHR_Creation</string>
    <string name="play_email">shrcreation.media\'@gmail.com</string>
    <string name="play_website">https://www.shrcreation.com</string>
    <string name="play_rate_now">https://play.google.com/store/apps/details?id=com.watchfreemovies.freehdcinema786</string>
    <string name="shr_creation">SHR Creation</string>
    <string name="ad_attribution">AD</string>
    <string name="applovin_sdk_key">h_SI4RH8q40T3xf1aRSRtbznFChbszL2K2PUQpTxxskOwo6LGumFvQgemqzfycGOwb2mKDFZoEecwDCsvaB0uD</string>
    <string name="banner_ad_unit_id">d4d88b4ae4fa4ca9</string>
    <string name="interstitial_ad_unit_id">4fe9a34c3ef9384c</string>
    <string name="rewarded_ad_unit_id">13b9c5221d90909c</string>
    <string name="mrec_ad_unit_id">01300249931833ea</string>
    <string name="native_small_ad_unit_id">b8dc6dcf7317353d</string>
    <string name="native_medium_ad_unit_id">9a29b536830656f5</string>
    <string name="startapp_app_id">205948484</string>
    <string name="unity_game_id">4718385</string>
    <string name="unity_banner_ad_unit_id">Banner_Android</string>
    <string name="unity_interstitial_ad_unit_id">Interstitial_Android</string>
    <string name="unity_rewarded_ad_unit_id">Rewarded_Android</string>
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="hello">Hello</string>
    <string name="username">Anonymous</string>
    <string name="share">Share</string>
    <string name="signup">Sign Up</string>
    <string name="lets_start_learning">Let\'s start Watching</string>
    <string name="an_account">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="email2">Email : </string>
    <string name="password">Password</string>
    <string name="password2">Password : </string>
    <string name="register">Register</string>
    <string name="sign_up_policy_message">By clicking Register, you agree to our</string>
    <string name="privacy_term">Privacy &amp; Policy</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_sign_up_with_email">Sign up with Email</string>
    <string name="or_sign_in_with_google">Or Sign in with Google</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="refund_message">* Refunds can be issued only if you send a request for refund within 48 hours of your order. \n\n * To request a refund, you can mail us your order number and date (from your Google Play Order Receipt) to our email: info@shrcreation.com</string>
    <string name="log_in">Sign In</string>
    <string name="login_message">Hello Again!</string>
    <string name="login_message2">Welcome back you\'ve missed!</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="welcome_message">Welcome back, Read our..</string>
    <string name="sendEmailVerification">Verification email is sent. Verify and Sign In!</string>
    <string name="failed_to_send_verification_email">Failed To Send Verification Email</string>
    <string name="verify_email">Verify your email first</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_message">Please enter your registered email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_my_password">Remember password!</string>
    <string name="menu_jscript">Home</string>
    <string name="menu_learn">Genres</string>
    <string name="menu_discuss">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pro">PRO</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>
    <string name="play_store">Play Store</string>
    <string name="github">GitHub</string>
    <string name="website">Website</string>
    <string name="link_instagram">https://www.instagram.com/shrcreation4/</string>
    <string name="link_facebook">https://www.facebook.com/shrcreation</string>
    <string name="link_linkedin">https://www.linkedin.com/in/shr-creation-a80602227/</string>
    <string name="link_twitter">https://twitter.com/ShrCreation</string>
    <string name="link_github">https://github.com/shrcreation</string>
    <string name="feedback">Feedback</string>
    <string name="rate_now">Rate Now</string>
    <string name="follow_us">Follow Us</string>
    <string name="more_apps">More Apps</string>
    <string name="signOut">Sign Out</string>
    <string name="upgrade_pro">Upgrade PRO</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="share_knowledge">Invite Friends</string>
    <string name="contact_us">Contact Us</string>
    <string name="update_now">Update Now</string>
    <string name="exclamation">!</string>
    <string name="log_in_details">Info</string>
    <string name="feedback_message">Please provide your message here..</string>
    <string name="feedback_message2">What\'s bothering you! Share anything you want or Request movies</string>
    <string name="feedback_email">Write your email here..</string>
    <string name="send">Send</string>
    <string name="dialog_feedback">Feedback Submitted</string>
    <string name="dialog_feed_message">We value every piece of feedback we receive and use it to improve your HD Movies experience.</string>
    <string name="dialog_ok">OK</string>
    <string name="message">Message :</string>
    <string name="dialog_close_title">Thank You For Using Our App</string>
    <string name="dialog_close_msg">Before low rate please share your problems.
        Your ratings and feedback will help us make the app better and deliver the best experience to you.
     Love this app, please rate us 5 star to support our developers!!!</string>
    <string name="dialog_option_quit">QUIT</string>
    <string name="dialog_option_rate_us">RATE US</string>
    <string name="yes_signout">Yes, SignOut</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_signout">Are you sure want to sign out?</string>
    <string name="we_wish_to_see_you_back_real_soon">We wish to see you back real soon</string>
    <string name="bye">Bye!</string>
    <string name="upgrade_to_pro">Upgrade to PRO</string>
    <string name="congratulations">Congratulations, Welcome to Premium</string>
    <string name="welcome_to_pro">Welcome to Premium</string>
    <string name="pro_des">Celebrate Your Love For Code With PRO Access</string>
    <string name="pro_des_1">Unlimited Access For All PRO Content</string>
    <string name="pro_des_2">Get Ready For New Movies</string>
    <string name="pro_des_3">Free Exclusive Premium Movies</string>
    <string name="pro_des_4">Remove Ads</string>
    <string name="pro_des_5">And Much More!</string>
    <string name="try_free_for_7_days">Upgrade to Premium Now</string>
    <string name="_95">95%</string>
    <string name="best_value">BEST VALUE</string>
    <string name="_12_months">Lifetime</string>
    <string name="app_price">$0.99</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="just_one_tap_to_go">Just one tap to go</string>
    <string name="limited_time_offer">Limited time offer</string>
    <string name="buy_now">Upgrade Now</string>
    <string name="profile_bio_default_text">Add a bio..</string>
    <string name="write_your_profession">Write your profession</string>
    <string name="profession">Profession</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="about_or_bio">About or Bio</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="write_your_facebook_link">Write your facebook link start with (https:// ot http://)</string>
    <string name="write_your_instagram_link">Write your instagram link start with (https:// ot http://)</string>
    <string name="write_your_github_link">Write your netflix link start with (https:// ot http://)</string>
    <string name="write_your_linkedin_link">Write your linkedin link start with (https:// ot http://)</string>
    <string name="write_your_twitter_link">Write your twitter link start with (https:// ot http://)</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="github_link">Netflix Link</string>
    <string name="linkedin_link">LinkedIn Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="update">Update</string>
    <string name="usernameet">Username</string>
    <string name="write_your_username">Write your username</string>
    <string name="share_message">Hey check out this app to watch new movies:</string>
    <string name="share_message2">Daily watch and downloads new premium movies</string>
    <string name="share_message3">Downloads 1000+ new movies in HD Quality</string>
    <string name="share_message4">Watch movies in different categories</string>
    <string name="network_connected">Network Connection Successful</string>
    <string name="no_connection_text">You\'re offline, please connect to network first</string>
    <string name="_0">0</string>
    <string name="add_movies_sample_image">add_movies_sample_image</string>
    <string name="main_icon_image">Main_icon_image</string>
    <string name="play_button">play_button</string>
    <string name="hd">HD</string>
    <string name="select_server">Select Server</string>
    <string name="server_1">Server-1</string>
    <string name="server_2">Server-2</string>
    <string name="server_3">Server-3</string>
    <string name="server_4">Server-4</string>
    <string name="why_are_you_reporting_this">Why are you reporting this?</string>
    <string name="not_speak_english">Not speak english</string>
    <string name="no_subtitle">No subtitle</string>
    <string name="can_t_play">Can\'t Play</string>
    <string name="no_sound">No sound</string>
    <string name="not_downloading">Not downloading</string>
    <string name="title_not_match_with_movie">Title not match with movie</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="close">CLOSE</string>
    <string name="conformation">Conformation</string>
    <string name="are_you_sure_you_want_to_post_this_you_cannot_edit_or_delete_it">Are you sure you want to post this? You cannot edit or delete it.</string>
    <string name="yes">Yes!</string>
</resources>