<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:background="@drawable/ic_round_bg_1"
        android:backgroundTint="@color/colorToolbarDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/main_icon_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_main_icon_round" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/why_are_you_reporting_this"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/reportOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_ok"
            android:textColor="#66BB6A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/reportOk"
            app:layout_constraintTop_toTopOf="@+id/reportOk" />

        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6">

            <RadioButton
                android:id="@+id/radioBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/not_speak_english"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <RadioButton
                android:id="@+id/radioBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_subtitle"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/radioBtn1" />

            <RadioButton
                android:id="@+id/radioBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_t_play"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/radioBtn2"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioBtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_sound"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/radioBtn3"
                tools:ignore="TextContrastCheck" />

            <RadioButton
                android:id="@+id/radioBtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_downloading"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/radioBtn4" />

            <RadioButton
                android:id="@+id/radioBtn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_not_match_with_movie"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/radioBtn5" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>