<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@drawable/ic_round_bg_1"
        android:backgroundTint="@color/colorToolbarDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnCancle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/main_icon_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel_icon" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_server"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnServer_1"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_btn_round_bg_2"
            android:gravity="center"
            android:text="@string/server_1"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView49"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnServer_2"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_btn_round_bg_2"
            android:gravity="center"
            android:text="@string/server_2"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnServer_1"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnServer_3"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_btn_round_bg_2"
            android:gravity="center"
            android:text="@string/server_3"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnServer_2"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnServer_4"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_btn_round_bg_2"
            android:gravity="center"
            android:text="@string/server_4"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnServer_3"
            tools:ignore="TextContrastCheck" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>